--- a/src/test.less
+++ b/src/test.less
@@ -1,6 +1,6 @@
-html{
-    margin: 0;
-    body{
-        background-color: red;
-    }
+html {
+  margin: 0;
+  body {
+    background-color: #000;
+  }
 }
